<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/ingredients_of_recipe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Ingredient" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/steps_of_recipe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</ScrollView>