<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main_parent_view"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        app:titleTextColor="#fff"
        app:subtitleTextColor="#fff"
        android:background="@color/colorPrimary"
        android:layout_height="?attr/actionBarSize"
        app:layout_collapseMode="pin" />

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recipes_list"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:layout_width="match_parent"

            android:layout_height="wrap_content" />

        <ProgressBar
            android:id="@+id/recipes_progress"
            android:layout_width="@dimen/progress_bar_size"
            android:layout_height="@dimen/progress_bar_size"
            android:layout_gravity="center"
            android:visibility="gone" />
    </FrameLayout>
</LinearLayout>